app/k3s-system/fission/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fission
---
apiVersion: v1
kind: Namespace
metadata:
  name: fission-function
