app/k3s-system/fission/ingress-http-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fission-https-redirect
  namespace: fission
spec:
  redirectScheme:
    permanent: true
    scheme: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fission-router-http
  namespace: fission
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: fission-fission-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: fission.192.168.0.10.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 80
