app/k3s-system/fission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fission-router
  namespace: fission
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: fission.192.168.0.10.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 80
  tls:
    - hosts:
        - fission.192.168.0.10.sslip.io
      secretName: fission-router-tls
